--- a/index.html
+++ b/index.html
@@ -1,17 +1,37 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <title>JavaScript lodash Templates</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <article>
-      <header><h2>The Results are In!</h2></header>
-      <p>
-        After careful consideration and a generous grant from NASA, our team has determined that a woodchuck could chuck five wood, with a standard deviation of +/- .37 wood.
-      </p>
-      <footer>posted by Chuck Wooden</footer>
-    </article>
-    <script src="lodash.min.js"></script>
-    <script src="index.js"></script>
-  </body>
+        <header>
+            <h2>The Results are In!</h2>
+        </header>
+        <p>
+            After careful consideration and a generous grant from NASA, our team has determined that a woodchuck could chuck five wood, with a standard deviation of +/- .37 wood.
+        </p>
+        <footer>posted by Chuck Wooden</footer>
+        <form onsubmit="postComment();return false;">
+         Name: <input type="text" id="commenterName"><br>
+         Comment: <input type="textarea" id="commentText"><br>
+         <input type="submit">
+       </form>
+      </article>
+     <script id="comment-template" type="text/x-lodash-template">
+       <div class="comment">
+         <div class="comment-body"><%- comment %></div>
+         <div class="commenter">
+           <p>
+             <span class="posted-by">Posted By: </span>
+             <%- commenter %>
+           </p>
+         </div>
+       </div>
+     </script>
+          <script src="lodash.min.js"></script>
+          <script src="index.js"></script>
+      </body>
 </html>
